--- a/templates/data.html
+++ b/templates/data.html
@@ -124,52 +124,40 @@
                 justify-content: center;
             }
 
-            p2 {
+            .p2 {
                 line-height: 1.5;
                 letter-spacing: .2px;
                 {#font-size: 80%;#}
-                font-size: 16px;
-                {#font-size: 2vw;#}
+                font-size: 18px;
+                display: inline-flex;
+                {#font-size: 0.9vw;#}
             }
 
             h2 {
-                font-size: 20px;
-                {#font-size:8vw;#}
-                text-align: justify;
-                {#font-size: 2vw;#}
+                font-size: 22px;
+                {#text-align: justify;#}
+                display: inline-flex;
+                {#font-size: 1.5vw;#}
             }
 
             ul {
-                font-size: 16px;
-                {#font-size:8vw;#}
-                text-align: justify;
-                {#font-size: 2vw;#}
+                font-size: 18px;
+                {#text-align: justify;#}
+                {#font-size: 0.9vw;#}
             }
 
             .col-container{
-                {#align-items: center;#}
-                {#justify-content: center;#}
-                {#flex: 0;#}
-                {#padding: 0;#}
                 font-family: 'Roboto', sans-serif;
                 margin: auto;
-                display: inline-block;
+                {#display: inline-block;#}
                 position: relative;
-                {#width: 80%;#}
-                {#font-size: 80%;#}
-                }
 
-            {# .box1-content {#}
-            {#    flex: 0;#}
-            {#    padding: 0;#}
-            {#    font-family: 'Roboto', sans-serif;#}
-            {#    opacity: 0;#}
-            {#    color: #888484;#}
-            {#    margin: auto;#}
-            {#    display: block;#}
-            {#    border-radius: 8px;#}
-                {#flex-direction: row;#}
-            {#}#}
+                flex: 0;
+                padding: 0;
+                color: #888484;
+                display: block;
+                border-radius: 8px;
+                }
 
             .column2{
                 background:#E8E8E8;
@@ -177,10 +165,11 @@
                 display: inline-block;
                 padding: 89px;
                 border-radius: 8px;
-                width: 31%;
+                width: 30.9%;
             }
             .column1{
                 background:#E8E8E8;
+                justify-content: left;
                 {#align-items: flex-start;#}
                 {#float: left;#}
                 {#width: 200px;#}
@@ -189,16 +178,13 @@
                 margin:16px;
                 display: inline-block;
                 padding: 89px;
-                width: 30.5%;
-                {#width: 30.5%;#}
+                width: 30.9%;
                 border-radius: 8px;
                 {#text-align: justify;#}
                 {#align-items: stretch;#}
                 font-family: 'Roboto', sans-serif;
                 color: #69859d;
                 position: relative;
-                {#margin: auto;#}
-                {#display: block;#}
             }
             .column3{
                 background:#E8E8E8;
@@ -206,26 +192,31 @@
                 display: inline-block;
                 padding: 89px;
                 border-radius: 8px;
-                width: 31%;
+                width: 30.9%;
             }
 
             .box2-side {
                 width: 160px;
-                float: right;
+                float: left;
                 border-radius: 8px;
                 display: flex;
-                justify-content: center;
-                align-items: center;
+                {#justify-content: center;#}
+                {#align-items: center;#}
                 font-family: 'Roboto', sans-serif;
                 position: relative;
             }
 
+            .col-container,
+            .box2-side {
+                transition: all .3s ease-out;
+                color: #69859d;
+                position: relative;
+        }
+
             .btn {
-                display: inline-flex;
+                display: flex;
                 background: #68819a;
-                {#display: block;#}
-                {#width: 160px;#}
-                width: 7vw;
+                width: 6vw;
                 {#height: 9vh;#}
                 height: 50px;
                 color: #ffffff;
@@ -236,7 +227,7 @@
                 margin: auto;
                 transition: all 0.2s;
                 justify-content: center;
-                float:right;
+                {#float:right;#}
                 {#align-items: center;#}
                 vertical-align: center;
                 font-size:3vw;
@@ -248,7 +239,7 @@
                background: #5c748c;
                 transform: scale(1.1);
                 border-radius: 8px;
-                width: 7vw;
+                width: 6vw;
                 {#height: 9vh;#}
                 {#width: 160px;#}
                 height: 50px;
@@ -321,14 +312,14 @@
             All receivers (with a sampling rate of 1 second). The raw data is saved in the
             Rinex 3.02 format. Based on the results of the measurements, the variations
             of the TEC for each satellite-receiver beam are calculated.</p>
-{#          <div class="col-container">#}
                 <div class="column1">
                     <div class="col-container">
                         <h2>Javad Sigma</h2>
                         <br>
-                        <p2>Coordinates: <br>
+                        <p class="p2">Coordinates: <br>
                             latitude: 54°57´ <br>
                             longitude: 37°46´
+                            <br>
                             <br>
                             <ul>
                                 <li>GPS L1/L2/L5</li>
@@ -336,7 +327,7 @@
                                 <li>SBAS L1/L5</li>
                                 <li>1 Hz update rate</li>
                             </ul>
-                        </p2>
+                        </p>
                         <div class="box2-side">
                             <form method="post" id="vlf">
                                 <br>
@@ -346,15 +337,14 @@
                         </div>
                     </div>
                 </div>
-{#          </div>#}
-{#          <div class="col-container">#}
-               <div class="column2">
+                <div class="column2">
                    <div class="col-container">
                         <h2>Javad Prego</h2>
                         <br>
-                        <p2>Coordinates: <br>
+                        <p class="p2">Coordinates: <br>
                             latitude: 54°57´ <br>
                             longitude: 37°46´
+                            <br>
                             <br>
                             <ul>
                                 <li>GPS L1/L2/L5</li>
@@ -362,7 +352,7 @@
                             </ul>
                             <br>
                             <br>
-                        </p2>
+                        </p>
                         <div class="box2-side">
                             <form method="post" id="vlf">
                                 <br>
@@ -372,15 +362,14 @@
                         </div>
                    </div>
                 </div>
-{#          </div>#}
-{#          <div class="col-container">#}
-               <div class="column3">
+                <div class="column3">
                    <div class="col-container">
                         <h2>Trimble 5700</h2>
                         <br>
-                        <p2>Coordinates: <br>
+                        <p class="p2">Coordinates: <br>
                             latitude: 54°57´ <br>
                             longitude: 37°46´
+                            <br>
                             <br>
                             <ul>
                                 <li>GPS L1/L2/L5</li>
@@ -388,7 +377,7 @@
                             </ul>
                             <br>
                             <br>
-                        </p2>
+                        </p>
                         <div class="box2-side">
                             <form method="post" id="vlf">
                                 <br>
