--- a/templates/data.html
+++ b/templates/data.html
@@ -130,6 +130,7 @@
                 {#font-size: 80%;#}
                 font-size: 16px;
                 display: inline-flex;
+                margin-left: 5%;
                 {#font-size: 0.9vw;#}
             }
 
@@ -137,11 +138,13 @@
                 font-size: 22px;
                 {#text-align: justify;#}
                 display: inline-flex;
+                margin-left: 5%;
                 {#font-size: 1.5vw;#}
             }
 
             ul {
                 font-size: 16px;
+                margin-left: 5%;
                 {#text-align: justify;#}
                 {#font-size: 0.9vw;#}
             }
@@ -413,7 +416,8 @@
           <div class="textcols1">
             <div class="textcols1-item">
 {#                <b>Текст первой колонки</b>#}
-                        <h2>Javad Sigma</h2>
+                        <h2> <br>
+                            Javad Sigma</h2>
                         <br>
                         <br>
                         <p class="p2">Coordinates: <br>
@@ -438,7 +442,8 @@
                         </div>
             </div>
             <div class="textcols1-item">
-                        <h2>Javad Prego</h2>
+                        <h2> <br>
+                            Javad Prego</h2>
                         <br>
                         <br>
                         <p class="p2">Coordinates: <br>
@@ -454,16 +459,17 @@
                             <br>
                         </p>
                         <div class="box2-side">
-                            <form method="post" id="vlf">
+                            <form method="post" id="gps">
                                 <br>
                                 <button type="submit" formaction="/date-selection" class="btn" style="font-size:2vw;">⟶</button>
-                                <input type="hidden" id="source" name="source" value="vlf">
+                                <input type="hidden" id="source" name="source" value="gps">
                             </form>
                             <br>
                         </div>
             </div>
             <div class="textcols1-item">
-                        <h2>Trimble 5700</h2>
+                        <h2> <br>
+                            Trimble 5700</h2>
                         <br>
                         <br>
                         <p class="p2">Coordinates: <br>
