--- a/templates/data.html
+++ b/templates/data.html
@@ -231,6 +231,7 @@
                 {#margin-left: 2%;#}
                 font-size: 14px;
                 border-radius: 8px;
+                {#max-height: 500px;#}
             }
             .textcols1 .textcols1-item:last-child {
                 margin-right: 0 ;
@@ -414,7 +415,7 @@
 {#                </div>#}
 
           <div class="textcols1">
-            <div class="textcols1-item">
+            <div class="textcols1-item" style="max-height: 1000px; min-height: 400px">
 {#                <b>Текст первой колонки</b>#}
                         <h2> <br>
                             Javad Sigma</h2>
@@ -441,7 +442,7 @@
                             <br>
                         </div>
             </div>
-            <div class="textcols1-item">
+            <div class="textcols1-item" style="max-height: 1000px; min-height: 400px">
                         <h2> <br>
                             Javad Prego</h2>
                         <br>
@@ -467,7 +468,7 @@
                             <br>
                         </div>
             </div>
-            <div class="textcols1-item">
+            <div class="textcols1-item" style="max-height: 1000px; min-height: 400px">
                         <h2> <br>
                             Trimble 5700</h2>
                         <br>
@@ -508,5 +509,200 @@
       container.classList.toggle('right-open');
     }));
     </script>
+
+
+
+
+{#    #  ДЛЯ GPS, переместить потом#}
+{#    <style>#}
+{#    #container {#}
+{#        position: relative;#}
+{#        width: 330px;#}
+{#        overflow: hidden;#}
+{#        border: 1px solid;#}
+{#    }#}
+{#    #left {#}
+{#        position: absolute;#}
+{#        top: 0;#}
+{#        right: 0;#}
+{#        width: 100px;#}
+{#        height: 210px;#}
+{#        background-color: #4b7e63;#}
+{#    }#}
+{#    ul1 {#}
+{#        margin: 0;#}
+{#        padding: 0;#}
+{#        overflow: hidden;#}
+{#    }#}
+{#    li1 {#}
+{#        float: right;#}
+{#        width: 100px;#}
+{#        height: 100px;#}
+{#        list-style-position: inside;#}
+{#        list-style-type: none;#}
+{#        background-color: green;#}
+{#    }#}
+{#    li1:nth-child(3),#}
+{#    li1:nth-child(5) {#}
+{#        clear: right;#}
+{#    }#}
+{#    </style>#}
+{#    <script type='text/javascript'>#}
+{#    </script>#}
+{#    <body>#}
+{#        <div id='container'>#}
+{#            <div id='left'></div>#}
+{#            <ul1>#}
+{#                <li1>test1</li1>#}
+{#                <li1>test2</li1>#}
+{#                <li1>test3</li1>#}
+{#                <li1>test4</li1>#}
+{#                <li1>test5</li1>#}
+{#                <li1></li1>#}
+{#                <li1></li1>#}
+{#            </ul1>#}
+{#        </div>#}
+{#    </body>#}
+
+
+    <style>
+        .new1 div {
+          border: 1px solid #0e0e0e;
+        }
+
+        .new1 .first-li {
+          grid-column-start: 3;
+          grid-column-end: 1;
+          {#grid-row-start: 1;#}
+          {#grid-row-end: 2;#}
+        }
+
+        * { box-sizing: border-box; }
+        body { margin: 0; border-color: #1a1e21; }
+
+        .grid
+        {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          {#grid-gap: 10px;#}
+          width: 90%;
+          margin-left: 5%;
+
+          background-color: #fbfbfc;
+          padding: 10px;
+
+          min-height: 100vh;
+        }
+
+        .grid__item
+        {
+          border-radius: 4px;
+            border: 1px solid #030303;
+          min-height: 20vh;
+        }
+
+        .grid__item--small
+        {
+          background-color: #e5e9ea;
+            min-height: 20vh;
+            {#float: right;#}
+            {#grid-column: 2;#}
+        }
+
+        .grid__item--big
+        {
+          background-color: #e5e9ea;
+          grid-row: 5 span;
+          {#float: left;#}
+            grid-column: 1;
+        }
+
+        .btn_view {
+                display: inline-flex;
+                background: #68819a;
+            {#font-size: 16px;#} width: 140px;
+                height: 45px;
+                color: #ffffff;
+                font-size: 20px;
+                font-family: 'Roboto', sans-serif;
+                border: #68819a;
+                border-radius: 8px;
+                margin: auto;
+                justify-content: center;
+                align-items: center;
+                vertical-align: center;
+        }
+
+        .btn_view:hover {
+                background: #5c748c;
+                color: #f8f6f6;
+        }
+    </style>
+
+
+<div class="grid">
+    <div class="grid__item grid__item--big">
+        <img src="{% static 'test.jpg' %}" alt="" style="width: 90%; margin-left: 5%;">
+    </div>
+    <div class="grid__item grid__item--small">
+        <img src="{% static 'test.jpg' %}" alt="" style="width: 90%; margin-left: 5%;">
+    </div>
+    <div class="grid__item grid__item--small">
+      <img src="{% static 'test.jpg' %}" alt="" style="width: 90%; margin-left: 5%;">
+    </div>
+    <div class="grid__item grid__item--small">
+        <img src="{% static 'test.jpg' %}" alt="" style="width: 90%; margin-left: 5%;">
+    </div>
+    <div class="grid__item grid__item--small">
+        <img src="{% static 'test.jpg' %}" alt="" style="width: 90%; margin-left: 5%;">
+    </div>
+    <div class="grid__item grid__item--small">
+        <img src="{% static 'test.jpg' %}" alt="" style="width: 90%; margin-left: 5%;">
+    </div>
+</div>
+
+    <div style="align-items: center; margin: 0 auto; text-align: center; font-size: 18px">
+        <br>
+        <label for="stations" style="font-family: 'Roboto', sans-serif;">Select
+            station </label>
+        <select id="stations" onchange="stat()"></select>
+        <br>
+        <br>
+        <form method="post" id="gps">
+            <button type="submit" formaction="/data" class="btn_view" onclick="view_data()">View</button>
+{#            <input type="hidden" id="source" name="source" value="gps">#}
+{#            <input type="hidden" id="new_stat" name="new_stat" value="">#}
+        </form>
+    </div>
+    <script>
+
+        currentStat = {{ new_stat }};
+        selectStat = document.getElementById("stations");
+
+        function stat(){
+            let selectStat = document.getElementById('stations');
+            for (var i = 0; i < 32; i++){
+            selectStat.options[selectStat.options.length] = new Option(i+1, i);
+          }
+        }
+        stat();
+
+        function view_data() {
+                currentStat = {{ new_stat }};
+                const new_stat = document.getElementById("new_stat");
+                new_stat.value = currentStat;
+                {#showCalendar(currentMonth, currentYear);#}
+        }
+
+        {#function jump() {#}
+        {#        currentStat = parseInt(selectStat.value);#}
+        {#        const new_stat = document.getElementById("new_stat");#}
+        {#        new_stat.value = currentStat;#}
+        {#        date_form.setAttribute("action", "/get_gps_stat");#}
+        {#        date_form.submit();#}
+        {#}#}
+
+    </script>
+
 
 {% endblock %}
