--- a/templates/gps.html
+++ b/templates/gps.html
@@ -109,7 +109,13 @@
 
     <div class="grid">
         <div class="grid__item grid__item--big">
+            <div class="gallery">
+{#            <img src="{% static im_all %}" alt="" style="width: 90%; margin-left: 5%;"#}
+{#            onclick="largeImg()" id="img1">#}
+{#            убрать!#}
             <img src="{% static im_all %}" alt="" style="width: 90%; margin-left: 5%;">
+{#            <input type="hidden" id="new_year" name="new_year" value="">#}
+            </div>
         </div>
         {% for im in images %}
             <div class="grid__item grid__item--small">
@@ -129,7 +135,46 @@
             <input type="hidden" id="new_stat" name="new_stat" value="">
         </form>
     </div>
+
     <script>
+
+    // Убрать!
+    {#img = document.getElementById("img1");#}
+    {#function largeImg() {#}
+    {#    img.style.transform = "scale(1.5)";#}
+    {#}#}
+
+        const oGallery = document.querySelector('.gallery');
+        oGallery.addEventListener('click', function(ev) {
+          if (ev.target.tagName != 'IMG') { return false; };
+          let oTarget = ev.target, nWidth, nHeight, nRatio = oTarget.offsetWidth / oTarget.offsetHeight;
+          let oBig = this.appendChild(document.createElement('DIV'));
+          oBig.style.position = `absolute`;
+          oBig.style.top = `${oTarget.offsetTop}px`; oBig.style.left = `${oTarget.offsetLeft}px`;
+          oBig.style.width = `${oTarget.offsetWidth}px`; oBig.style.height = `${oTarget.offsetHeight}px`;
+          if (this.offsetHeight < this.offsetWidth) {
+            nHeight = this.offsetHeight; nWidth = nHeight * nRatio;
+          } else {
+            nWidth = this.offsetWidth; nHeight = nWidth / nRatio;
+          };
+          oBig.style.background = `center / 100% 100% no-repeat url('${oTarget.currentSrc}')`;
+          oBig.insertAdjacentHTML('beforeend', '<div class="close">×</div>');
+          oBig.addEventListener('transitionend', function() { this.querySelector('.close').style.opacity = 1; });
+          oBig.addEventListener('click', function(ev) {
+            ev.stopPropagation();
+            this.addEventListener('transitionend', function() { this.remove(); });
+            this.style.transition = `.5s ease-in`;
+            this.style.height = this.style.width = `0px`;
+          oGallery.classList.toggle('show', false);
+          });
+          oBig.classList.toggle('active');
+          oBig.style.width = `${nWidth / 0.8}px`; oBig.style.height = `${nHeight / 0.8}px`;
+          oBig.style.top = oBig.style.left = `50%`;
+          oBig.style.transform = `translate(-50%, -50%) rotate(1turn)`;
+          oGallery.classList.toggle('show', true);
+        });
+
+
         function stat(){
             let selectStat = document.getElementById('stations');
             for (var i = 0; i < 32; i++){
