--- a/templates/data.html
+++ b/templates/data.html
@@ -409,10 +409,10 @@
         <p></p>
            <div class="box1-side">
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
-            <form method="post" id="vlf">
+            <form method="post" id="lem">
                 <br>
                 <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
-                <input type="hidden" id="source" name="source" value="vlf">
+                <input type="hidden" id="source" name="source" value="lem">
             </form>
            </div>
       </div>
