--- a/templates/gps.html
+++ b/templates/gps.html
@@ -105,6 +105,41 @@
                 background: #5c748c;
                 color: #f8f6f6;
         }
+
+
+        {#body { margin: 0; height: 100vh; overflow: hidden; background: 0% 0% / auto no-repeat url('https://i.stack.imgur.com/m9NKc.png'), #58555c; }#}
+        .gallery {
+          position: relative; display: flex; flex-flow: row wrap;
+          justify-content: space-evenly; align-items: center;
+          height: 100%; width: 90%; margin: 0 auto;
+          background-color: #fff;
+        }
+        .gallery img {
+          height: auto; width: 200px; margin: 10px;
+          box-shadow: 0 0 0 5px #fff, 0 0 0 6px #919191;
+          {#transition: .5s linear; cursor: pointer;#}
+        }
+        .show img { opacity: .25; pointer-events: none; }
+        .active {
+          transition: box-shadow .5s linear .5s;
+          {#transition: box-shadow .5s linear .5s, top 1s ease-out, left 1s ease-out, transform 1s ease-out, width 1s ease-in, height 1s ease-in;#}
+          box-shadow: 0 0 0 10px #fff; filter: drop-shadow(1px 2px 6px #000);
+          pointer-events: none;
+        }
+        .close {
+          position: relative; left: 100%;
+          height: 20px; width: 20px;
+          transform: translate(0%, -100%);
+          border-radius: 50%;
+          box-shadow: 0 0 0 2px #fff, 0 0 2px 2px #000;
+          font: bold 20px/20px Arial; text-align: center;
+          background-color: #000; color: #fff;
+          pointer-events: auto; cursor: pointer;
+          {#transition: 1s linear; opacity: 0;#}
+          {#transition: 1s linear; opacity: 0;#}
+        }
+        .active .close:hover { transform: translate(0%, -100%) rotate(.5turn); transition: 1s ease; }
+
     </style>
 
     <div class="grid">
@@ -158,12 +193,12 @@
             nWidth = this.offsetWidth; nHeight = nWidth / nRatio;
           };
           oBig.style.background = `center / 100% 100% no-repeat url('${oTarget.currentSrc}')`;
-          oBig.insertAdjacentHTML('beforeend', '<div class="close">×</div>');
+          oBig.insertAdjacentHTML('beforeend', '<div class="close" style="font-size: 20px">×</div>');
           oBig.addEventListener('transitionend', function() { this.querySelector('.close').style.opacity = 1; });
           oBig.addEventListener('click', function(ev) {
             ev.stopPropagation();
             this.addEventListener('transitionend', function() { this.remove(); });
-            this.style.transition = `.5s ease-in`;
+            {#this.style.transition = `.5s ease-in`;#}
             this.style.height = this.style.width = `0px`;
           oGallery.classList.toggle('show', false);
           });
