--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -149,6 +149,7 @@
             </picture>
 {#            </a>#}
         {% endif %}
+    </div>
 {#    {% else %}Ваш запрос завершился с ошибкой.{% endif %}</div>#}
     </body>
 {% endblock %}
