--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -184,8 +184,17 @@
     </nav>
     <br>
     {% block content %}{% endblock %}
+
+    <style>
+        .my_footer {
+            clear: both;
+            position: relative;
+            height: 50px;
+            margin-top: -50px;
+        }
+    </style>
     <div class="container px-4 py-5" id="main-contents">
-        <footer class="footer pt-3 mt-4 text-muted"
+        <footer class="footer my_footer pt-3 mt-4 text-muted"
                 style="font-family: 'Roboto', sans-serif; border-top: 1px solid #9d9b9b;">© IDG RAS
             <br>
             Institute of geosphere dynamics of Russian academy of sciences
